--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Patrick Schababerle",
-            "email": "deine-email@example.com"
+            "email": "patrick@schababerle.digital"
         }
     ],
     "require": {
