--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,9 +10,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
-        php: [7.4, 8.0, 8.1, 8.2]
+        php: [7.4, 8.0, 8.1]
         stability: [prefer-stable]
 
     name: PHP ${{ matrix.php }} - ${{ matrix.stability }}
@@ -26,18 +26,36 @@ jobs:
         with:
           php-version: ${{ matrix.php }}
           extensions: dom, curl, libxml, mbstring, zip, json
-          coverage: xdebug
+          coverage: none
+
+      - name: Validate composer.json
+        run: composer validate --strict
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: |
-          composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+        run: composer install --prefer-dist --no-interaction --no-progress
 
-      - name: Verify directory structure
+      - name: Check directory structure
         run: |
-          ls -la
-          mkdir -p tests
-          [ -d "tests" ] && echo "Tests directory exists" || echo "Tests directory missing"
-          [ -f "phpunit.xml.dist" ] && echo "PHPUnit config exists" || echo "PHPUnit config missing"
+          echo "Current directory structure:"
+          find . -type d | sort
+          echo "Test files:"
+          find ./tests -name "*.php" | sort
+          echo "PHPUnit config:"
+          cat phpunit.xml.dist
+
+      - name: Show PHPUnit version
+        run: vendor/bin/phpunit --version
 
       - name: Execute tests
         run: vendor/bin/phpunit
